# gnome-applets

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.README  GNOME_NetspeedApplet.server.in.in  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.CVS  README.STABLE_BRANCH  README.cvs  README.md  acconfig.h  applet-docs.am.template  applet-docs.make  autogen.sh  config.h.in  configure.ac  configure.in  git.mk  gnome-applets.doap  gnome-applets.spec.in  message-of-doom  netspeed.doap  netspeed_applet.spec.in  sgmldocs.make
accessx-status/: .cvsignore  .gitignore  ChangeLog  GNOME_AccessxApplet.xml  GNOME_AccessxStatusApplet.server.in.in  Makefile.am  accessx-status-applet-menu.xml  applet.c  applet.h  org.gnome.applets.AccessxStatusApplet.panel-applet.in.in  org.gnome.panel.applet.AccessxStatusAppletFactory.service.in
another_clock/: .cvsignore  ChangeLog  Makefile.am  README  TODO  another_clock.c  another_clock.xpm  another_clock_applet.1  another_clock_applet.desktop  another_clock_applet.desktop.in  another_clock_applet.gnorba
applet-dirs/: Amusements.directory  Clocks.directory  Makefile.am  Monitors.directory  Multimedia.directory  Network.directory  Utility.directory
asclock/: .cvsignore  ChangeLog  INSTALL  Makefile.am  README  TODO  asclock.c  asclock.h  asclock_applet.1  asclock_applet.desktop  asclock_applet.desktop.in  asclock_applet.gnorba  clk.xpm  config.c  date.xpm  dialogs.c  draw.c  gnome_config.c  led.xpm  month.xpm  parser.c  rot.c  symbols.c  timezone.c  version.h  weekday.xpm
batmon/: .cvsignore  AUTHORS  Makefile.am  batmon-ac.xpm  batmon-bat.xpm  batmon.c  batmon_applet.desktop  batmon_applet.gnorba
battery/: .cvsignore  AUTHORS  ChangeLog  GNOME_BatteryApplet_Factory.server.in  Makefile.am  battery.c  battery.h  battery_applet.1  battery_applet.desktop  battery_applet.desktop.in  battery_applet.gnorba  bolt-horiz.xpm  bolt.xpm  properties.c  properties.h  read-battery.c  read-battery.h  session.c  session.h
battstat/: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.old  GNOME_BattstatApplet.server.in  GNOME_BattstatApplet.server.in.in  GNOME_BattstatApplet.xml  INSTALL  MAINTAINERS  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  acpi-freebsd.c  acpi-freebsd.h  acpi-linux.c  acpi-linux.h  applet-docs.make  autogen.sh  batpatch  battstat-applet-menu.xml  battstat-hal.c  battstat-hal.h  battstat-tesla.xpm  battstat-upower.c  battstat-upower.h  battstat.h  battstat.h-44694  battstat.schemas.in  battstat.xcf  battstat_applet.c  battstat_applet.c-82531  battstat_applet.desktop  battstat_applet.desktop.in  battstat_applet.glade  battstat_applet.glade1  battstat_applet.gnorba  (+13 more)
brightness/: Makefile.am  brightness-applet-menu.xml  brightness-applet.c  org.gnome.BrightnessApplet.panel-applet.in.in  org.gnome.panel.applet.BrightnessAppletFactory.service.in
bug-applet/: .cvsignore  ChangeLog  Makefile.am  bug-applet.c  bug-applet.desktop  bug-applet.desktop.in  bug-applet.gnorba  bugtypes.xml
bussign/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  bussign.c  bussign.h  bussign_applet.desktop  bussign_applet.gnorba  http_get.c
cdplayer/: .cvsignore  ChangeLog  GNOME_CDPlayerApplet.server  GNOME_CDPlayerApplet.server.in  GNOME_CDPlayerApplet.server.in.in  GNOME_CDPlayerApplet.xml  Makefile.am  cdda-solaris.h  cdpanel.c  cdplayer.c  cdplayer.h  cdplayer.schemas  cdplayer.schemas.in  cdplayer_applet.1  cdplayer_applet.desktop  cdplayer_applet.desktop.in  cdplayer_applet.gnorba  cdrom-interface.h  cdrom-irix.c  cdrom-linux.c  cdrom-netbsd.c  cdrom-solaris.c  led.c  led.h  reader-solaris.c  reader-solaris.h  writer-solaris.c  writer-solaris.h
charpick/: .cvsignore  .cvsingore  .gitignore  ChangeLog  ChangeLog.old  GNOME_CharpickerApplet.server.in  GNOME_CharpickerApplet.server.in.in  GNOME_CharpickerApplet.xml  Makefile.am  charpick-applet-menu.xml  charpick.c  charpick.h  charpick.schemas  charpick.schemas.in  charpick_applet.1  charpick_applet.desktop  charpick_applet.desktop.in  charpick_applet.gnorba  org.gnome.applets.CharpickerApplet.panel-applet.in.in  org.gnome.gnome-applets.charpick.gschema.xml.in.in  org.gnome.panel.applet.CharpickerAppletFactory.service.in  properties.c
clipboard/: .cvsignore  ChangeLog  Makefile.am  clipboard.c  clipboard_applet.desktop  clipboard_applet.desktop.in  clipboard_applet.gnorba  copy.xpm  set_selection.xpm
clock/: .cvsignore  Makefile.am  clock.c  clock_applet.desktop
clockmail/: .cvsignore  AUTHORS  ChangeLog  Changelog  Makefile.am  THEME-SPEC  backgrnd.xpm  backgrnd_tiny.xpm  backgrnd_tiny_v.xpm  button.c  button.h  button.xpm  button_tiny.xpm  button_tiny_v.xpm  clock.c  clock.h  clockmail.c  clockmail.h  clockmail_applet.1  clockmail_applet.desktop  clockmail_applet.desktop.in  clockmail_applet.gnorba  clockmaildata  def_theme.c  def_theme.h  digmed.xpm  digsml.xpm  display.c  display.h  globals.c  item.c  item.h  mailpics.xpm  number.c  number.h  pixbuf_ops.c  pixbuf_ops.h  properties.c  rotate.c  rotate.h  (+7 more)
cpufreq/: .cvsignore  .gitignore  ChangeLog  GNOME_CPUFreqApplet.server.in.in  GNOME_CPUFreqApplet.xml  Makefile.am  README  cpufreq-applet-menu.xml  cpufreq-applet.schemas.in  cpufreq-preferences.glade  cpufreq-preferences.ui  org.gnome.applets.CPUFreqApplet.panel-applet.in.in  org.gnome.gnome-applets.cpufreq.gschema.xml.in.in  org.gnome.panel.applet.CPUFreqAppletFactory.service.in
cpuload/: .cvsignore  Makefile.am  cpuload.c  cpuload_applet.desktop  cpuload_applet.gnorba  linux-proc.c  linux-proc.h  properties.c  properties.h
cpumemusage/: .cvsignore  AUTHORS  Makefile.am  cpumemusage.c  cpumemusage_applet.1  cpumemusage_applet.desktop  cpumemusage_applet.desktop.in  cpumemusage_applet.gnorba  proc.c  procbar.c  procbar.h
data/: GNOME_WindowPicker.server.in.in  Makefile.am  org.gnome.applets.WindowPicker.panel-applet.in.in  org.gnome.panel.applet.WindowPickerFactory.service.in  org.gnome.panel.applet.WindowPickerFactory.service.in   org.gnome.window-picker-applet.gschema.xml.in.in  window-picker-applet.schemas.in
desk-guide/: .cvsignore  TODO  (+13 more)
(+4524 files in other folders)
